# obs-scene-switcher

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_JP.md  buildspec.json
.github/: copilot-instructions.md
data/locale/: en-US.ini  ja-JP.ini
doc/: architecture.md  versioning.md
installer/: setup.nsi
src/: obs_scene_switcher.cpp  obs_scene_switcher.hpp  plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/core/: reward_rule.hpp
src/eventsub/: eventsub_client.cpp  eventsub_client.h  eventsub_client.hpp  twitch_event_types.h
src/i18n/: locale_manager.cpp  locale_manager.hpp
src/oauth/: http_server.cpp  http_server.hpp  twitch_oauth.cpp  twitch_oauth.hpp
src/obs/: config_manager.cpp  config_manager.h  config_manager.hpp  scene_switcher.cpp  scene_switcher.hpp
src/ui/: auth_settings_dialog.cpp  auth_settings_dialog.hpp  dock_main_widget.cpp  dock_main_widget.hpp  login_widget.cpp  login_widget.hpp  plugin_dock.cpp  plugin_dock.hpp  plugin_properties.cpp  plugin_properties.h  rule_row.cpp  rule_row.hpp  settings_window.cpp  settings_window.hpp
src/update/: update_checker.cpp  update_checker.hpp
uml/: README.md  uml_class_diagram_full.puml  uml_class_rule_model.puml  uml_component_system_overview.puml  uml_sequence_eventsub_scene_switch.puml  uml_sequence_oauth_authentication.puml  uml_sequence_plugin_enable.puml  uml_state_scene_switcher.puml
